SF Primes/src/objects/TRV_Resource__c.object
<CustomObject>
    <description>Used to manage individuals who are resources on Travers projects.
This data is displayed/filtered on the Resource Manager Visualforce page</description>
    <fields>
        <fullName>TRV_FRM_Profile_Name_onUser__c</fullName>
        <formula>TRV_Resource__r.Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Location_City__c</fullName>
        <label>Resource Location - City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Location_State__c</fullName>
        <label>Resource Location - State</label>
        <picklist>
            <controllingField>TRV_Region__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
                <color>#0B24BE</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Resource_Number__c</fullName>
        <displayFormat>Resource-{00000}</displayFormat>
        <label>Resource Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TRV_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Process Coach</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
                <color>#000099</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>FTE</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRV_TerminationDate_Required_Status</fullName>
        <active>true</active>
        <description>User should provide value for &apos;Termination Date&apos; when related &apos;Resource Status&apos; field is updated as &apos;Terminated&apos;.</description>
        <errorConditionFormula>ISPICKVAL(TRV_Status__c, &apos;Terminated&apos;)  &amp;&amp; ISNULL(TRV_Termination_Date__c )</errorConditionFormula>
        <errorDisplayField>TRV_Termination_Date__c</errorDisplayField>
        <errorMessage>Please enter Termination date.</errorMessage>
    </validationRules>
</CustomObject>